 6. Slightly reduce rounding of covers in lists.
 7. Add traditional Chinese translation - thanks to jwchen119
 8. Treat images in 'Apps' as per this in 'Radio' - i.e. do not force square.
 9. Disable rounded corners via "?square" URL query parameter - to be replaced
    by UI setting in 3.5.0
10. Request JPG cover-art from LMS for now-playing, so that transparent
    backgrounds are black.

3.4.2
-----
1. Fix long-press on queue duration opening queue transfer dialog.
2. Don't hard-code list of known translations, use Perl code to build this.
3. Round corners of images.
4. Menu/dialog shadows for all themes.
5. Append artist name to album title (in toolbar) when listing album tracks.
6. Add custom no-cover image.
7. Fix missing icon for 'More' menu entry when clicking on album/track lists
   in now-playing info view.
8. Always show album cover under album review.

3.4.1
-----
1. Update translations.
2. Fix colour of text in 'Help' files when using dark backgrounds.
3. Don't reload page when changing from 'set colour from cover', just unset
   changed variables so that CSS resets them.
4. Show cover art for all tracks when browsing via 'Music Folder'.

3.4.0
-----
 1. Allow sorting playlist, and queue, on single field.
 2. Add option to change highlight colour based upon current cover.
 3. Add option to configure padding between list items.
 4. Add explicit icons for shuffle off and repeat off.
 5. Don't recolour active icons, different images are used to indicate state.
 6. Switch "..." and "(...)" icons yet again, use "..." for menus as its
    similar to other menu icon.
 7. Try to interpret back button as go back when running as a WebApp.
 8. Default to 'Darker' for iOS and Android.
 9. Don't change icon size when change font size.
10. Delay showing disconnected icon for 5 seconds.
11. Adjust Adwaita theme colours.
12. Allow specifying themeColor and defaultTheme as URL query parameters.
13. Fix pin/unpin start of 'My Music' menu item entries.