@@ -47,6 +47,7 @@ const LMS_CACHE_VERSION = 12;
 const LMS_LIST_ELEMENT_SIZE = 48;
 const LMS_LIST_3LINE_ELEMENT_SIZE = 68;
 const LMS_BLANK_COVER = "/music/0/cover";
+const DEFAULT_RADIO_COVER = "/material/html/images/noradio.png";
 const DEFAULT_COVER = "/material/html/images/nocover.png";
 const LMS_DOUBLE_CLICK_TIMEOUT = 300;
 const LMS_VOLUME_DEBOUNCE = 250;
