@@ -234,6 +234,12 @@ function resolveImageUrl(image, size) {
         }
     }
 
+    if (image=="html/images/cover.png") {
+        return DEFAULT_COVER;
+    }
+    if (image=="html/images/radio.png") {
+        return DEFAULT_RADIO_COVER;
+    }
     var idx = image.lastIndexOf(".png");
     if (idx < 0) {
         idx = image.lastIndexOf(".jpg");
